--- a/BlindCatAvalonia/SDcontrols/Scaffold/Utils/NavBar.axaml
+++ b/BlindCatAvalonia/SDcontrols/Scaffold/Utils/NavBar.axaml
@@ -83,7 +83,7 @@
         <ItemsControl.ItemTemplate>
             <local:MenuItemTemplateSelector>
                 <local:MenuItemTemplateSelector.DefaultTemplate>
-                    <DataTemplate DataType="sd:ScaffoldMenu">
+                    <DataTemplate DataType="ScaffoldMenu">
                         <Button
                             Margin="0,0,5,0"
                             Command="{Binding #root.CommandMenuItem}"
